cros: Do not enable login-screen shortcuts on lock.

Calling the shortcut may cause chrome to crash, as the chrome-side handler
assumes the login screen is active.

Bug: 875778
Change-Id: Ib297d5239c9198d0cd047bd2b5e240dbc1d49ca8
Reviewed-on: https://chromium-review.googlesource.com/1182184
Reviewed-by: Xiyuan Xia <xiyuan@chromium.org>
Commit-Queue: Jacob Dufault <jdufault@chromium.org>
Cr-Commit-Position: refs/heads/master@{#584577}
Former-commit-id: cc16d7048cac4a09ff9095c4851bc576c54d08eb